<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/setting_account"
        android:textSize="15dp">

        <Preference
            android:defaultValue="Mir"
            android:key="userNickname"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/setting_nickname"
            android:summary=""/>

        <Preference
            android:defaultValue="Mir"
            android:key="userEmail"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/setting_email"
            android:summary=""/>

        <Preference
            android:title="@string/setting_accountsetting">
            <intent
                android:targetClass="com.itsnowball.aicomposer.AccountSettingActivity"
                android:targetPackage="com.itsnowball.aicomposer" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/setting_other"
        android:textSize="15dp">

        <Preference
            android:title="@string/setting_agreement" >
            <intent
                android:targetClass="com.itsnowball.aicomposer.AgreementActivity"
                android:targetPackage="com.itsnowball.aicomposer" />
        </Preference>

        <Preference
            android:title="@string/setting_personal">
            <intent
                android:targetClass="com.itsnowball.aicomposer.PersonalActivity"
                android:targetPackage="com.itsnowball.aicomposer" />
        </Preference>

        <Preference
            android:title="@string/setting_review">
        </Preference>

        <Preference
            android:title="@string/setting_remove">
        <intent
            android:targetClass="com.itsnowball.aicomposer.WithdrawActivity"
            android:targetPackage="com.itsnowball.aicomposer" />
        </Preference>

        <Preference
            android:title="@string/setting_credit">

            <intent
                android:targetClass="com.itsnowball.aicomposer.CreditActivity"
                android:targetPackage="com.itsnowball.aicomposer" />

        </Preference>

    </PreferenceCategory>

</PreferenceScreen>