<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itsnowball.aicomposer.CreditActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/credit_plan"
        android:id="@+id/textView28"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="17dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/credit_plan_content"
        android:id="@+id/textView30"
        android:layout_below="@+id/textView28"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/credit_client_dev"
        android:id="@+id/textView31"
        android:textSize="17dp"
        android:textStyle="bold"
        android:layout_below="@+id/textView30"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/credit_client_dev_content"
        android:id="@+id/textView32"
        android:textSize="15dp"
        android:layout_below="@+id/textView31"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/credit_aiserver_dev"
        android:id="@+id/textView33"
        android:textSize="17dp"
        android:textStyle="bold"
        android:layout_below="@+id/textView32"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/credit_aiserver_dev_content"
        android:id="@+id/textView34"
        android:textSize="15dp"
        android:layout_below="@+id/textView33"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/credit_webserver_dev"
        android:id="@+id/textView35"
        android:textSize="17dp"
        android:textStyle="bold"
        android:layout_below="@+id/textView34"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/credit_webserver_dev_content"
        android:id="@+id/textView36"
        android:textSize="15dp"
        android:layout_below="@+id/textView35"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textAlignment="center" />
</RelativeLayout>
