<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itsnowball.aicomposer.MakeMusicActivity"
    android:background="@color/colorWhite">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:textSize="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_margin="10dp"
        android:layout_below="@+id/textView26"
        android:background="@drawable/edittext_makemusic_shape"
        android:hint="@string/makemusic_name"
        android:singleLine="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/textView19"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/seekBar1"
            android:layout_marginTop="0dp"
            android:layout_weight="1.5"
            android:text="@string/music_slow"
            android:layout_marginRight="10dp"
            android:gravity="right" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minHeight="5dp"
            android:maxHeight="5dp"
            android:max="15"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/textView16"
            android:layout_alignEnd="@+id/editText3"
            android:layout_weight="10" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/seekBar1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1.5"
            android:text="@string/music_fast"
            android:gravity="left" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_beat"
        android:id="@+id/textView16"
        android:layout_below="@+id/editText3"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="17dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_beatexplain"
        android:id="@+id/textView19"
        android:layout_below="@+id/textView16"
        android:layout_alignStart="@+id/textView16"
        android:layout_marginTop="1dp"
        android:textSize="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_pitch"
        android:id="@+id/textView20"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/textView18"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:textSize="17dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_pitchexplain"
        android:id="@+id/textView21"
        android:layout_below="@+id/textView20"
        android:layout_alignStart="@+id/textView20"
        android:layout_marginTop="1dp"
        android:textSize="14dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/textView21"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/seekBar2"
            android:layout_marginTop="0dp"
            android:layout_weight="1.5"
            android:text="@string/music_pitch_low"
            android:layout_marginRight="10dp"
            android:gravity="right" />

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minHeight="5dp"
            android:maxHeight="5dp"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/textView16"
            android:layout_alignEnd="@+id/editText3"
            android:layout_weight="10"
            android:indeterminate="false" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/seekBar2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1.5"
            android:text="@string/music_pitch_high"
            android:gravity="left" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:text="10/16"
        android:gravity="center_vertical"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:text="0 %"
        android:gravity="center_vertical"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:textSize="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_title"
        android:id="@+id/textView25"
        android:layout_alignParentTop="true"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="10dp"
        android:textSize="17dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_titleexplain"
        android:id="@+id/textView26"
        android:textSize="14dp"
        android:layout_below="@+id/textView25"
        android:layout_alignLeft="@+id/textView25" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motive_music_title"
        android:id="@+id/textView27"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="10dp"
        android:textSize="17dp"
        android:layout_below="@+id/textView24"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_titleexplain"
        android:id="@+id/textView29"
        android:textSize="14dp"
        android:layout_below="@+id/textView27"
        android:layout_alignStart="@+id/textView27" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/editText"
        android:gravity="center_vertical"
        android:textSize="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/edittext_makemusic_shape"
        android:hint="@string/makemusic_motive_name"
        android:singleLine="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/textView29"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp" />

</RelativeLayout>
