<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.itsnowball.aicomposer.MainActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@drawable/edittext_main_shape"
        android:id="@+id/et_id"
        android:layout_weight="2"
        android:textSize="15dp"
        android:padding="10dp"
        android:textColor="@color/colorPrimary"
        android:singleLine="true"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@drawable/edittext_main_shape"
        android:id="@+id/et_pw"
        android:layout_weight="2"
        android:textSize="15dp"
        android:padding="10dp"
        android:textColor="@color/colorPrimary"
        android:singleLine="true"
        android:layout_below="@+id/et_id"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:password="true" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookJoinBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_above="@+id/textView12"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="0dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/login"
        android:id="@+id/normalLoginBtn"
        android:textColor="@color/colorWhite"
        android:background="@drawable/login_button_selector"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="15dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_below="@+id/et_pw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:text="@string/join_btn"
        android:textSize="15dp"
        android:layout_marginBottom="25dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView12"
        android:textColor="@color/colorWhite"
        android:text="@string/join_before_button"
        android:textSize="15dp"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp" />

</RelativeLayout>
